--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   },
   "devDependencies": {
     "@types/chrome": "0.0.126",
+    "@typescript-eslint/eslint-plugin": "^4.8.0",
+    "@typescript-eslint/parser": "^4.8.0",
+    "eslint": "^7.13.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "ts-loader": "^8.0.11",
     "typescript": "^4.0.5",
     "webpack": "^4.44.1",
